# zawory-dekompresyjne

./: .gitignore  README.md  gui.py  obliczenia.py  pdf_service.py  pyproject.toml  requirements.txt  test_obliczenia.py  test_pdf_service.py  test_validation.py  validation.py  zawory_dekompresyjne.spec
